Changed to scss and added readme to ignore

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   "ignore": [
     "CHANGELOG.md",
     "CONTRIBUTING.md",
+    "README.md",
     "component.json",
     "package.json",
     "test.html"
