--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "normalize-scss",
-  "version": "3.0.2",
-  "main": "normalize.scss",
+  "name": "normalize",
+  "version": "3.0.1",
+  "main": "normalize",
   "author": "Nicolas Gallagher",
   "ignore": [
     "CHANGELOG.md",
